--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html2pdf.js": "^0.9.3",
     "jspdf": "^2.3.1",
     "next": "11.0.1",
+    "pdfkit": "^0.12.1",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
